<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_sayHello"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_primary"
        android:onClick="sayHello"
        android:text="@string/btn_sayHello"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_count"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_count"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_primary"
        android:onClick="counterUp"
        android:text="@string/btn_counterUp"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn_reset"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_disabled"
        android:onClick="resetToZero"
        android:text="@string/btn_reset"
        android:textColor="@color/darkblue"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_sayHello"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/homeMain_bg"
        android:layout_width="797dp"
        android:layout_height="474dp"
        android:contentDescription="@string/main_bg_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg" />

    <TextView
        android:id="@+id/caption_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/caption_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeMain_bg" />

    <TextView
        android:id="@+id/mainHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/headline"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caption_text" />

    <TextView
        android:id="@+id/textCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="0"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/mainHeading"
        app:layout_constraintStart_toEndOf="@+id/mainHeading" />

    <Button
        android:id="@+id/btn_star1"
        android:layout_width="17dp"
        android:layout_height="17dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_star"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainHeading" />

    <Button
        android:id="@+id/btn_star2"
        android:layout_width="17dp"
        android:layout_height="17dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_star"
        app:layout_constraintStart_toEndOf="@+id/btn_star1"
        app:layout_constraintTop_toBottomOf="@+id/mainHeading" />

    <Button
        android:id="@+id/btn_star3"
        android:layout_width="17dp"
        android:layout_height="17dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_star"
        app:layout_constraintStart_toEndOf="@+id/btn_star2"
        app:layout_constraintTop_toBottomOf="@+id/mainHeading" />

    <Button
        android:id="@+id/btn_star4"
        android:layout_width="17dp"
        android:layout_height="17dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_star_empty"
        app:layout_constraintStart_toEndOf="@+id/btn_star3"
        app:layout_constraintTop_toBottomOf="@+id/mainHeading" />

    <Button
        android:id="@+id/btn_star5"
        android:layout_width="17dp"
        android:layout_height="17dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_star_empty"
        app:layout_constraintStart_toEndOf="@+id/btn_star4"
        app:layout_constraintTop_toBottomOf="@+id/mainHeading" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:paddingStart="16dp"
        android:paddingTop="0dp"
        android:paddingEnd="16dp"
        android:text="This is a long paragraph. This section contains all the descriptions and contents."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_star3" />

</android.support.constraint.ConstraintLayout>